tests/test_exception/good/unlabeled_exception.catala
## [Test]

```catala
new scope A:
  param x content int

scope A:
  def x := 0

  exception
  def x := 1
```
