tests/test_exception/bad/one_ambiguous_exception.catala
## Test

```catala
new scope A:
  param x content int
  param y content int

scope A:
  def x := 0

  exception
  def x := 1

  def y := 2

  def y := 4

  exception
  def y := 3
```
